src/test/deca/syntax/parser/valid/or_expr_with_int.deca
// Parser test, or with a number operand, syntaxically correct (not contextually)

{
    if (x || 15 ){
        a = 5;
    }
}