src/test/deca/syntax/parser/invalid/invalid_float_format_point_before.deca
// Parser test, invalid format, special character not allowed

{
    float x = .5;
}